<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondoAzul"
    tools:context=".AgregarMedicamente">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicamentos"
        android:fontFamily="@font/redrock"
        android:textColor="@color/blanco"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="50dp"></TextView>


    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="50dp"
        android:hint="Nombre del medicamento"
        android:textColor="@color/blanco"
        android:textSize="20dp"></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dias"
        android:textColor="@color/blanco"
        android:textSize="20dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="5dp"
        ></TextView>


    <!-- Lunes -->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:paddingLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia1"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            ></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <CheckBox
                android:id="@+id/checkLunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                ></CheckBox>
        </LinearLayout>
    </LinearLayout>



    <!-- Martes -->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:paddingLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia2"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            ></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <CheckBox
                android:id="@+id/checkMartes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                ></CheckBox>
        </LinearLayout>
    </LinearLayout>


    <!-- Miercoles -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:paddingLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia3"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            ></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <CheckBox
                android:id="@+id/checkMiercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                ></CheckBox>
        </LinearLayout>
    </LinearLayout>


    <!-- Jueves -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:paddingLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia4"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            ></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <CheckBox
                android:id="@+id/checkJueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                ></CheckBox>
        </LinearLayout>
    </LinearLayout>

    <!-- Viernes -->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:paddingLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia5"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            ></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <CheckBox
                android:id="@+id/checkViernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                ></CheckBox>
        </LinearLayout>
    </LinearLayout>

    <!-- Sabado -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:paddingLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia6"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            ></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <CheckBox
                android:id="@+id/checkSabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                ></CheckBox>
        </LinearLayout>
    </LinearLayout>

    <!-- Domingo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:paddingLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia7"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            ></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <CheckBox
                android:id="@+id/checkDomingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                ></CheckBox>
        </LinearLayout>
    </LinearLayout>


    <EditText
        android:id="@+id/hora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:hint="@string/hora"
        android:textColor="@color/blanco"
        android:textSize="20dp"
        ></EditText>



    <Button
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_agregar_medicamente"
        android:layout_gravity="center"
        android:textColor="@color/blanco"
        android:textSize="20dp"
        android:text="@string/agregar"
        android:id="@+id/agregarbutton"

        ></Button>








</LinearLayout>