<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoAzul"
    android:orientation="vertical"
    tools:context=".menu">

    <TextView
        android:id="@+id/salud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salud"
        android:textColor="@color/blanco"
        android:textSize="50dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/redrock"
        android:textAlignment="center">
    </TextView>


    <!-- Menú -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hoy"
            android:textColor="@color/blanco"
            android:textSize="20dp"
            android:paddingHorizontal="40dp">
        </TextView>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:background="@drawable/linea"
                ></ImageView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicamentos"
            android:textColor="@color/gris"
            android:paddingHorizontal="5dp"
            android:textSize="20dp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alerta"
            android:textColor="@color/gris"
            android:paddingHorizontal="20dp"
            android:textSize="20dp"></TextView>
    </LinearLayout>



    <!-- Porcentaje -->


    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/circle">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuMeta"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            android:gravity="center">
        </TextView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="center">
            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="75"
                android:textSize="50dp"
                android:textStyle="normal"></TextView>
            <TextView
                android:layout_marginHorizontal="8dp"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="%"></TextView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hoy"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/verde"
            ></TextView>
    </LinearLayout>




    <!-- Opciones -->


    <LinearLayout
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="60dp"
            android:background="@drawable/marco">
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/dieta">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dieta"
                android:textColor="@color/fondoAzul"
                android:gravity="center"
                android:textSize="18dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:background="@drawable/marco">
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/azucar">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/azucar"
                android:textColor="@color/fondoAzul"
                android:gravity="center"
                android:textSize="18dp"></TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="60dp"
            android:background="@drawable/marco">
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/plan">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plan"
                android:textColor="@color/fondoAzul"
                android:gravity="center"
                android:textSize="18dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:background="@drawable/marco">
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ejercicio">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ejercicio"
                android:textColor="@color/fondoAzul"
                android:gravity="center"
                android:textSize="18dp"></TextView>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>








